New Updates to JS HTML and CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1>Memory Game!</h1>
     <div id="game">
     </div>
+    <div id="winner-box">
+      <h2>You Win!</h2>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
