New CSS & Refresh Button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </div>
     <div id="winner-box">
       <h2>You Win!</h2>
+      <button id="restart">Play Again?</button>
     </div>
     <script src="script.js"></script>
   </body>
