--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game!</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -10,7 +11,7 @@
     <div id="game">
     </div>
     <div id="winner-box">
-      <h2>You Win!</h2>
+      <h2>Winner Winner,<br> Chicken Dinner!</h2>
       <button id="restart">Play Again?</button>
     </div>
     <script src="script.js"></script>
